--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@ list.innerHTML="";
 products.forEach(p=>{
 list.innerHTML+=`
 <div class="card">
-<img src="${p.img}">
+<img src="imagens.jpg">
 <h3>${p.name}</h3>
 <div class="old-price">De R$ ${p.old.toFixed(2)}</div>
 <div class="price">Por R$ ${p.price.toFixed(2)}</div>
@@ -304,3 +304,4 @@ renderProducts();
 
 </body>
 </html>
+
